--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,16 @@
 {
-  "extends": ["eslint:recommended", "prettier"],
-  "plugins": [],
+  "extends": [
+    "eslint:recommended", 
+    "prettier",     
+    "plugin:react/recommended",     
+    "plugin:jsx-a11y/recommended",     
+    "plugin:errors/import"
+  ],
+  "rules": {
+    "react/prop-types": 0,
+    "react/rewct-in-js-scope": 0
+  },
+  "plugins": ["react", "import", "jsx-a11y"],
   "parserOptions": {
     "ecmaVersion": 2021,
     "sourceType": "module",
@@ -13,5 +23,10 @@
     "es6": true, 
     "browser": true,
     "node": true
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
