--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".ts"] }]
   },
   "plugins": ["react", "jsx-a11y"],
+  "parser": "@babel/eslint-parser",
   "parserOptions": {
     "ecmaVersion": 2021,
     "sourceType": "module",
