--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.15.8",
+    "@babel/eslint-parser": "^7.13.4",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/preset-env": "^7.13.5",
     "@babel/preset-react": "^7.14.5",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
